<resources>
    <string name="app_name">ChatBotPOC</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Login">Login</string>
    <string name="input1">Enter mobile number</string>
    <string name="password">Enter password</string>
    <string name="new_user">New User</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome to ChatBot</string>
    <string name="help_text">I am here to help you please click button to proceed</string>
    <string name="click_here">Click here</string>
    <string name="splash">Welcome to chatbot</string>


</resources>