<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.example.chatbotpoc.data.viewmodel.LoginVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="visible"
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/adamina"
                android:hint="@string/input1"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/InputText"
                android:maxLength="10"
                android:inputType="number"
                android:background="@drawable/input_bg"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/adamina"
                android:hint="@string/password"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
                style="@style/InputText"
                android:inputType="textPassword"
                android:background="@drawable/input_bg"
                android:layout_marginTop="@dimen/margin_top"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="@dimen/margin_top"
                style="@style/NewUser"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            style="@style/BlueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
