<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileVM"
            type="com.example.chatbotpoc.data.viewmodel.UserVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{profileVM.mobileNumber}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/NewUser"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_tv"
                android:layout_marginTop="10dp"
                style="@style/NewUser"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/help_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
                android:layout_marginTop="10dp"
                style="@style/NewUser"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            style="@style/BlueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

       <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/button_blue"
            android:src="@drawable/bot2"

            >

        </com.google.android.material.floatingactionbutton.FloatingActionButton>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>